OLMIS-3667 Added expanded representation to InventoryItem user field
This change adds new Java pattern to handle expansion of a specific
ObjectReferenceDto field in any DTOs. The pattern has been introduced
in InventoryItem to fetch additional data about the user that
last modified the instance (first and last name). It also removes
this data from InventoryItem domain, since user data should not
be stored in CCE.
